--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 logging.level.org.springframework=info
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.url= jdbc:h2:tcp://localhost/~/msa
+spring.datasource.driverClassName= org.h2.Driver
+spring.datasource.username= sa
+spring.datasource.password=
+spring.jpa.defer-datasource-initialization=true
