--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,16 +1,22 @@
 logging.level.org.springframework=info
 
-spring.h2.console.enabled=true
-
-
-spring.datasource.url= jdbc:h2:tcp://localhost/~/msa
-spring.datasource.driverClassName= org.h2.Driver
-spring.datasource.username= sa
-spring.datasource.password=
+#spring.h2.console.enabled=true
+#spring.datasource.url= jdbc:h2:tcp://localhost/~/msa
+#spring.datasource.driverClassName= org.h2.Driver
+#spring.datasource.username= sa
+#spring.datasource.password=
 spring.sql.init.mode=embedded
 spring.jpa.defer-datasource-initialization = true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
+spring.datasource.username= chan
+spring.datasource.password= 1234
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.security.user.name=admin
+spring.security.user.password=admin
 
