--- a/microservices/currency-exchange-service/src/main/resources/application.properties
+++ b/microservices/currency-exchange-service/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 spring.application.name=currency-exchange
 server.port=8000
+
+spring.h2.console.enabled=true
+spring.datasource.url= jdbc:h2:tcp://localhost/~/msa
+spring.datasource.driverClassName= org.h2.Driver
+spring.datasource.username= sa
+spring.datasource.password=
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
